# patter

./: .gitignore  Cargo.toml  README.md  README.org
design/: mutablilty_and_memory_mk1.org  notes.org
lispap_std/: std.lp
patter_std/: std.pat
src/: context.rs  error.rs  intern.rs  macros.rs  main.rs  number.rs  parse.rs
