[package]
name = "patter"
version = "0.1.0"
authors = ["Asa Zeren <asaizeren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
itertools = "0.9"
num = "0.3.0"
unicode-segmentation = "1.6.0"

[profile.test]
opt-level = 3